make some changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div class="container">
       <h1>Find Your Anime</h1>
-      <div class="img-container" id="img-container"></div>
+      <div class="img-container" id="img-container">
+        <img src="resources/images/thump.jpg" alt="" />
+      </div>
       <div class="form-control">
         <input
           type="text"
@@ -19,6 +21,7 @@
         />
         <button class="find-btn" id="find-btn">Find</button>
       </div>
+      <div class="hide" id="waiting"><h3>Waiting...</h3></div>
       <div class="result-container" id="result-container">
         <!-- <div class="result">
           <div class="left">
